--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,16 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  fonts:
+  - family: Product Sans
+    fonts:
+      - asset: fonts/ProductSans-Regular.ttf
+#      - asset: fonts/ProductSansBoldItalic.ttf
+#        style: italic
+#        weight: 700
+#      - asset: fonts/ProductSansItalic.ttf
+#        weight: 700
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
