--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   mask_text_input_formatter: ^2.4.0
   checkbox_formfield: ^0.2.0
+  dropdown_button2: ^1.7.2
 
 dev_dependencies:
   flutter_test:
