Changed class constructor variable definitions, added date and time button, added primary and secondary butttons, and button group, and started working on form output and models

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   mask_text_input_formatter: ^2.4.0
   checkbox_formfield: ^0.2.0
   dropdown_button2: ^1.7.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
