--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   checkbox_formfield: ^0.2.0
   dropdown_button2: ^1.7.2
   intl: ^0.17.0
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
