--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,6 +12,7 @@ include: package:flutter_lints/flutter.yaml
 analyzer:
   errors:
     must_be_immutable: ignore
+    unused_element: ignore
 
 
 linter:
