--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dropdown_button2: ^1.7.2
   intl: ^0.17.0
   path_provider: ^2.0.11
+  flutter_guid: ^0.3.1
 
 dev_dependencies:
   flutter_test:
